--- a/devel/spirv-tools/Makefile
+++ b/devel/spirv-tools/Makefile
@@ -2,8 +2,8 @@
 
 PORTNAME=	spirv-tools
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2016.6-155
-DISTVERSIONSUFFIX=	-gf0fe601
+DISTVERSION=	2018.0-6
+DISTVERSIONSUFFIX=	-g9e19fc0
 CATEGORIES=	devel graphics
 
 MAINTAINER=	greg@unrelenting.technology
@@ -17,7 +17,7 @@ SHEBANG_FILES=	tools/lesspipe/spirv-lesspipe.sh
 USE_GITHUB=	yes
 GH_ACCOUNT=	KhronosGroup
 GH_PROJECT=	SPIRV-Tools
-GH_TUPLE=	KhronosGroup:SPIRV-Headers:2bb92e6f:headers/external/spirv-headers
+GH_TUPLE=	KhronosGroup:SPIRV-Headers:ce309203d:headers/external/spirv-headers
 
 CMAKE_ARGS+=	-DSPIRV_SKIP_TESTS:BOOL=ON \
 		-DSPIRV_WERROR:BOOL=OFF
