games/vcmi: update git rev

--- a/games/vcmi/Makefile
+++ b/games/vcmi/Makefile
@@ -2,8 +2,8 @@
 # $FreeBSD$
 
 PORTNAME=	vcmi
-DISTVERSION=	0.99-663
-DISTVERSIONSUFFIX=	-g6df536b
+DISTVERSION=	0.99-741
+DISTVERSIONSUFFIX=	-g968bd4a7
 CATEGORIES=	games
 
 MAINTAINER=	pkubaj@anongoth.pl
