--- a/multimedia/mpv/Makefile
+++ b/multimedia/mpv/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	mpv
-PORTVERSION=	0.27.2
+PORTVERSION=	0.28.2
 PORTREVISION=	1
 DISTVERSIONPREFIX=	v
 PORTEPOCH=	1
@@ -41,11 +41,11 @@ CONFIGURE_ARGS=	--docdir="${EXAMPLESDIR}" \
 		--enable-libmpv-shared
 
 OPTIONS_DEFINE=		ARCHIVE ASS DOCS LCMS2 LUAJIT MANPAGES TEST UCHARDET ZSH
-OPTIONS_DEFAULT=	ARCHIVE ASS DVDREAD DVDNAV MANPAGES OPENGL UCHARDET \
+OPTIONS_DEFAULT=	ARCHIVE ASS DVDREAD DVDNAV MANPAGES OPENGL VULKAN UCHARDET \
 			V4L VAAPI VDPAU X11 YTDL
 OPTIONS_GROUP=		IN VO AO
 OPTIONS_GROUP_IN=	CDIO DVDREAD DVDNAV LIBBLURAY V4L YTDL SMB
-OPTIONS_GROUP_VO=	CACA OPENGL VAAPI VDPAU WAYLAND X11
+OPTIONS_GROUP_VO=	CACA OPENGL VULKAN VAAPI VDPAU WAYLAND X11
 OPTIONS_GROUP_AO=	ALSA JACK PULSEAUDIO SDL SNDIO
 OPTIONS_SUB=		yes
 
@@ -54,6 +54,7 @@ DVDREAD_DESC=		DVD Playback support
 DVDNAV_DESC=		DVD menu navigation
 LUAJIT_DESC=		Use LuaJIT instead of Lua scripting language support
 UCHARDET_DESC=		Guess subtitle encoding via uchardet
+VULKAN_DESC=		Vulkan output support
 WAYLAND_DESC=		Wayland (graphics) support
 YTDL_DESC=		Install youtube-dl
 IN_DESC=		Input
@@ -105,6 +106,10 @@ MANPAGES_CONFIGURE_OFF=		--disable-manpage
 OPENGL_USE=			GL=egl,gbm,gl
 OPENGL_CONFIGURE_OFF=		--disable-gl
 OPENGL_IMPLIES=			X11
+
+VULKAN_LIB_DEPENDS=	libvulkan.so:graphics/vulkan-sdk
+VULKAN_CONFIGURE_OFF=		--disable-vulkan
+VULKAN_IMPLIES=			X11
 
 PULSEAUDIO_LIB_DEPENDS=		libpulse.so:audio/pulseaudio
 PULSEAUDIO_CONFIGURE_OFF=	--disable-pulse
