graphics/gimp-app: git gtk3-port-meson!!!

--- a/graphics/libmypaint/Makefile
+++ b/graphics/libmypaint/Makefile
@@ -1,8 +1,8 @@
 # $FreeBSD$
 
 PORTNAME=	libmypaint
-DISTVERSION=	1.3.0-83
-DISTVERSIONSUFFIX=	-g03f223a
+DISTVERSION=	1.3.0-84
+DISTVERSIONSUFFIX=	-g040310c
 CATEGORIES=	graphics
 
 MAINTAINER=	greg@unrelenting.technology
@@ -13,12 +13,12 @@ LICENSE=	ISCL
 BUILD_DEPENDS=	gobject-introspection>=1.0:devel/gobject-introspection
 LIB_DEPENDS=	libjson-c.so:devel/json-c
 
+GNU_CONFIGURE=	yes
 USE_GNOME=	glib20 intltool
-USE_AUTOTOOLS=	autoconf automake
 CFLAGS+=	${CFLAGS_${CHOSEN_COMPILER_TYPE}}
 CFLAGS_gcc=	-std=c99
 CONFIGURE_ARGS=	--disable-profiling
-USES=		gettext localbase pkgconfig python:2 gmake tar:xz
+USES=		gettext autoreconf libtool localbase pkgconfig python:2.7 gmake tar:xz
 USE_LDCONFIG=	yes
 
 USE_GITHUB=	yes
@@ -29,7 +29,9 @@ OPTIONS_DEFAULT=	OPENMP
 OPTIONS_SUB=		yes
 
 GEGL_DESC=		Graph based image processing framework support
-GEGL_LIB_DEPENDS=	libgegl-0.3.so:graphics/gegl3
+GEGL_LIB_DEPENDS=	libgegl-0.3.so:graphics/gegl3 \
+	libbabl-0.1.so:x11/babl \
+	libjson-glib-1.0.so:devel/json-glib
 GEGL_CONFIGURE_ENABLE=	gegl
 
 OPENMP_USES=		compiler:openmp
