audio/picard, audio/picard-plugins: update to git master

--- a/audio/picard/Makefile
+++ b/audio/picard/Makefile
@@ -1,13 +1,10 @@
 # Created by: Mario Sergio Fujikawa Ferreira <lioux@FreeBSD.org>
 # $FreeBSD$
 
-PORTNAME=	picard
-PORTVERSION=	1.4.2
-PORTREVISION=	1
-CATEGORIES=	audio python
-MASTER_SITES=	http://ftp.musicbrainz.org/pub/musicbrainz/picard/ \
-		ftp://ftp.musicbrainz.org/pub/musicbrainz/picard/ \
-		http://ftp.osuosl.org/pub/musicbrainz/picard/
+PORTNAME=		picard
+DISTVERSION=		2.0.0.dev4-34
+DISTVERSIONSUFFIX=	-gba32f829
+CATEGORIES=		audio python
 
 MAINTAINER=	jhale@FreeBSD.org
 COMMENT=	Next generation MusicBrainz Tagger
@@ -16,13 +13,15 @@ LICENSE=	GPLv2+
 LICENSE_FILE=	${WRKSRC}/COPYING.txt
 
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}discid>=0.5.2:audio/py-discid@${FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}mutagen>=1.23:audio/py-mutagen@${FLAVOR}
+		${PYTHON_PKGNAMEPREFIX}mutagen>=1.37:audio/py-mutagen@${FLAVOR}
 
-USES=		gettext pyqt:4 python:2.7 desktop-file-utils
-USE_PYQT=	core_run gui_run network_run xml_run sip
+USE_GITHUB=	yes
+GH_ACCOUNT=	metabrainz
+
+USES=		gettext pyqt:5 python:3.5+ desktop-file-utils
+USE_PYQT=	core_run gui_run widgets_run network_run xml_run sip
 USE_PYTHON=	distutils
-
-WRKSRC=		${WRKDIR}/${PORTNAME}-release-${PORTVERSION}
+PYDISTUTILS_INSTALLNOSINGLE=	yes
 
 OPTIONS_DEFINE=		ACOUSTID PLUGINS
 OPTIONS_DEFAULT=	PLUGINS
@@ -32,11 +31,7 @@ ACOUSTID_RUN_DEPENDS=	fpcalc:audio/chromaprint
 PLUGINS_DESC=		Install various plugins to extend functionality
 PLUGINS_RUN_DEPENDS=	picard-plugins>0:audio/picard-plugins
 
-post-patch:
-	@${REINPLACE_CMD} -e 's|distutils\.command\.install |setuptools\.command\.install |' \
-		${WRKSRC}/setup.py
-
 post-install:
-	${STRIP_CMD} ${STAGEDIR}${PYTHON_SITELIBDIR}/picard/util/astrcmp.so
+	${STRIP_CMD} ${STAGEDIR}${PYTHON_SITELIBDIR}/picard/util/_astrcmp.so
 
 .include <bsd.port.mk>
