net/freerdp: update to git master
latest Windows Server 2016 update broke authentication with rc1

--- a/net/freerdp/Makefile
+++ b/net/freerdp/Makefile
@@ -2,8 +2,8 @@
 # $FreeBSD$
 
 PORTNAME=	freerdp
-DISTVERSION=	2.0.0-rc1
-PORTREVISION=	1
+DISTVERSION=	2.0.0-rc1-319
+DISTVERSIONSUFFIX=	-g980bc9cef
 CATEGORIES=	net comms ipv6
 
 MAINTAINER=	kevans@FreeBSD.org
