--- a/multimedia/gaupol/Makefile
+++ b/multimedia/gaupol/Makefile
@@ -2,13 +2,10 @@
 # $FreeBSD$
 
 PORTNAME=	gaupol
-PORTVERSION=	0.19.2
-PORTREVISION=	4
+DISTVERSION=	1.3.1
 CATEGORIES=	multimedia python
-MASTER_SITES=	http://download.gna.org/gaupol/0.19/ \
-		http://www.c-s.li/ports/
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	greg@unrelenting.technology
 COMMENT=	Subtitle editor
 
 LICENSE=	GPLv3+
@@ -18,9 +15,12 @@ RUN_DEPENDS=	iso-codes>=0:misc/iso-codes \
 		${PYTHON_PKGNAMEPREFIX}chardet>=0:textproc/py-chardet@${FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}enchant>=1.5.1:textproc/py-enchant@${FLAVOR}
 
-USE_GNOME=	pygtk2 intltool
-USE_PYTHON=	distutils
-USES=		desktop-file-utils python:2.7
+USE_GITHUB=	yes
+GH_ACCOUNT=	otsaloma
+
+USES=		desktop-file-utils python:3.2+
+USE_GNOME=	gtk30 pygobject3 intltool
+USE_PYTHON=	distutils autoplist py3kplist
 INSTALLS_ICONS=	yes
 NO_ARCH=	yes
 
@@ -30,13 +30,9 @@ OPTIONS_SUB=	yes
 NLS_USES=	gettext
 NLS_USES_OFF=	gettext-tools
 
-post-patch:
-	@${REINPLACE_CMD} \
-		-e 's|share/man|man|g' \
-		-e 's,distutils\.command\.install$$,setuptools\.command\.install,g' \
-		-e 's,distutils\.command\.install\.,setuptools\.command\.install\.,g' \
-		-e 's|%%STAGEDIR%%|"${STAGEDIR}"|' \
-		-e 's|%%PREFIX%%|"${PREFIX}"|' \
-		${WRKSRC}/setup.py
+.include <bsd.port.pre.mk>
 
-.include <bsd.port.mk>
+# PYDISTUTILS_INSTALLNOSINGLE is deprecated so...
+PYDISTUTILS_INSTALLARGS:=	${PYDISTUTILS_INSTALLARGS:N--single-version-externally-managed}
+
+.include <bsd.port.post.mk>
