--- a/x11/py-xdot/Makefile
+++ b/x11/py-xdot/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	xdot
-PORTVERSION=	0.7
+PORTVERSION=	0.9
 CATEGORIES=	x11 python
 MASTER_SITES=	CHEESESHOP
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -12,7 +12,8 @@ COMMENT=	Interactive viewer for Graphviz dot files
 LICENSE=	LGPL3+
 
 NO_ARCH=	yes
-USES=		python
+USES=		python:3.4+
 USE_PYTHON=	autoplist distutils
+USE_GNOME=	gtk30 cairo pygobject3
 
 .include <bsd.port.mk>
