net-im/gajim: update to 1.0
Submitted as: https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=226794

--- a/net-im/gajim/Makefile
+++ b/net-im/gajim/Makefile
@@ -2,9 +2,9 @@
 # $FreeBSD$
 
 PORTNAME=	gajim
-PORTVERSION=	0.16.9
+PORTVERSION=	1.0.0
 CATEGORIES=	net-im
-MASTER_SITES=	http://gajim.org/downloads/0.16/
+MASTER_SITES=	https://gajim.org/downloads/1.0/
 
 MAINTAINER=	rm@FreeBSD.org
 COMMENT=	Jabber client based on a plugin system
@@ -15,17 +15,14 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}openssl>=0:security/py-openssl@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}sqlite3>=0:databases/py-sqlite3@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pyasn1>=0:devel/py-pyasn1@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}nbxmpp>0:net-im/py-nbxmpp@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}nbxmpp>=0.6.4:net-im/py-nbxmpp@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}python-gnupg>0:security/py-python-gnupg@${PY_FLAVOR}
 
 NO_ARCH=	yes
-USES=		cpe dos2unix gmake localbase pathfix python:2.7 tar:bzip2
-USE_GNOME=	intltool pygtk2
-USE_XORG=	x11 xext xscrnsaver
+USES=		cpe python:3.4+ tar:bzip2
+USE_PYTHON=	autoplist distutils
+USE_GNOME=	intltool gtk30 cairo pygobject3
 
-DOS2UNIX_FILES=	src/plugins/plugins_i18n.py
-GNU_CONFIGURE=	yes
-CONFIGURE_ENV+=	PYTHON=${PYTHON_CMD}
 INSTALLS_ICONS=	yes
 
 OPTIONS_DEFINE=	AVAHI CRYPTO DBUS DOCS GUPNP NLS SPELL
@@ -41,17 +38,8 @@ CRYPTO_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pycrypto>0:security/py-pycrypto@${PY_
 DBUS_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}dbus>=0.82.2:devel/py-dbus@${PY_FLAVOR}
 GUPNP_RUN_DEPENDS=	${PYTHON_SITELIBDIR}/gupnp/__init__.py:net/gupnp-igd
 NLS_USES=		gettext
-SPELL_LIB_DEPENDS=	libgtkspell.so:textproc/gtkspell
+SPELL_LIB_DEPENDS=	libgspell-1.so:textproc/gspell
 
-PORTDOCS=	AUTHORS ChangeLog README
 SUB_FILES=	pkg-message
-
-post-install:
-	@${MKDIR} ${STAGEDIR}${DOCSDIR}
-	${INSTALL_DATA} ${PORTDOCS:S|^|${WRKSRC}/|} ${STAGEDIR}${DOCSDIR}
-
-pre-build:
-	${PYTHON_CMD} -m compileall ${WRKSRC}/src
-	${PYTHON_CMD} -O -m compileall ${WRKSRC}/src
 
 .include <bsd.port.mk>
