--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1577,6 +1577,7 @@
     SUBDIR += mspdebug
     SUBDIR += mstch
     SUBDIR += mtbl
+    SUBDIR += mull
     SUBDIR += mutagen
     SUBDIR += myrepos
     SUBDIR += nana
