--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1579,6 +1579,7 @@
     SUBDIR += mspdebug
     SUBDIR += mstch
     SUBDIR += mtbl
+    SUBDIR += mull
     SUBDIR += mutagen
     SUBDIR += myrepos
     SUBDIR += nana
