--- a/math/Makefile
+++ b/math/Makefile
@@ -384,6 +384,7 @@
     SUBDIR += mumps4
     SUBDIR += muparser
     SUBDIR += nanoflann
+    SUBDIR += nasc
     SUBDIR += naturalmath
     SUBDIR += nauty
     SUBDIR += ndiff
