Set PULSEAUDIO and other defaults in a bunch of places

--- a/audio/musescore/Makefile
+++ b/audio/musescore/Makefile
@@ -43,7 +43,7 @@ CMAKE_ARGS+=	-DUSE_SYSTEM_FREETYPE="ON" \
 # WebEngine is only available on i386/amd64; defaults to ON there.
 # If enabled on arches that don't have WebEngine, the build breaks.
 OPTIONS_DEFINE=		ALSA JACK PORTAUDIO PULSEAUDIO WEBENGINE
-OPTIONS_DEFAULT=	PORTAUDIO
+OPTIONS_DEFAULT=	PULSEAUDIO
 OPTIONS_DEFAULT_amd64=	WEBENGINE
 OPTIONS_DEFAULT_i386=	WEBENGINE
 
