--- a/audio/openal-soft/Makefile
+++ b/audio/openal-soft/Makefile
@@ -34,7 +34,7 @@ LDFLAGS+=	-fuse-ld=gold \
 		-Wl,--as-needed
 
 OPTIONS_DEFINE=		EXAMPLES CONFIG JACK OSS PORTAUDIO PULSEAUDIO SDL SNDIO
-OPTIONS_DEFAULT=	OSS
+OPTIONS_DEFAULT=	PULSEAUDIO 
 OPTIONS_SUB=		yes
 
 CONFIG_DESC=		Install configuration utility (needs Qt 5)
