--- a/games/libretro-genesis_plus_gx/Makefile
+++ b/games/libretro-genesis_plus_gx/Makefile
@@ -5,7 +5,7 @@ PORTNAME=	libretro-genesis_plus_gx
 PORTVERSION=	0.20191028
 PORTREVISION=	1
 CATEGORIES=	games
-LICENSE_FILE=	${WRKSRC}/LICENSE.txt
+LICENSE=<------>GPGX
 
 MAINTAINER=	menelkir@itroll.org
 COMMENT=	An enhanced port of Genesis Plus - accurate & portable Sega 8/16 bit emulator
